--- a/src/data_collect/package.json
+++ b/src/data_collect/package.json
@@ -12,6 +12,7 @@
         "morgan": "^1.2.2",
         "multer": "^0.1.3",
         "serve-favicon": "^2.0.1",
-        "mysql": "*"
+        "mysql": "*",
+		"dateformat" : "*"
     }
 }
